--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,12 +1,19 @@
-.searchForm{
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   flex-direction: column;
-}
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+ }
+ 
+ body {
+   background: #f8f8f8;
+   color: #29292e;
+ }
+ 
+ body, input, button, textarea {
+   font: 400 16px 'Roboto', sans-serif;
+ }
 
+ .app{
+    max-width: 100vw;
+ }
 
-
-.gif{
-   margin-left: 5px;
-}
