--- a/src/styles/gifs.css
+++ b/src/styles/gifs.css
@@ -4,7 +4,6 @@
    align-items: center;
    justify-content: center;
    max-width: 100%;
-   background-color:red;
    height: auto;
 
 }
@@ -12,7 +11,7 @@
 .gif{
    height: 150px;
    color: white;
-   margin: 1.5px;
+   margin: 3px;
    flex: 1 0 auto;
-   max-width: 100%;
+   max-width: 350px;
 }
